# ales-nrm

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/ales_nrm/: __init__.py  centering.py  observation.py  utilities.py
src/ales_nrm/io/: __init__.py  read_fits.py
src/ales_nrm/masks/: __init__.py  lbti_nrm6_dx.txt  lbti_nrm6_sx.txt
src/ales_nrm/nrm/: __init__.py  mask.py  mask_rotation.py
src/ales_nrm/sampy_interface/: __init__.py  coords.py  extract.py
tests/: __init__.py  conftest.py  test_centering.py  test_observation.py  test_utilities.py
tests/test_io/: __init__.py  test_read_fits.py
tests/test_nrm/: __init__.py  test_mask.py  test_mask_rotation.py
tests/test_sampy_interface/: __init__.py  test_coords.py  test_extract.py
